[package]
name = "lininterp"
version = "0.1.1"
authors = ["dobkeratops <dobkeratopsgit@gmail.com>"]
description = "generic linear interpolation, should support dimension checking types etc"
keywords=["lerp","invlerp","dimensionChecking","maths","interpolation"]
license = "MIT"
repository = "https://github.com/dobkeratops/lininterp"

[dependencies]
