[package]
name = "lininterp"
version = "0.1.2"
authors = ["dobkeratops <dobkeratopsgit@gmail.com>"]
description = "generic linear interpolation; should support dimension checking types ect by virtue of using fully generic intermediate values. Also includes various related functions:  inv_lerp(x,x0,x1)     f.lerp_between(y0,y1),  x.lerp_points(x0,x1,y0,y1) , and y0..y1.lerp_by(x) (y0,y1).lerp_by(x))"
keywords=["lerp","invlerp","dimensionChecking","maths","interpolation"]
license = "MIT"
repository = "https://github.com/dobkeratops/lininterp"

[dependencies]
