[package]
name = "lininterp"
version = "0.1.3"
authors = ["dobkeratops <dobkeratopsgit@gmail.com>"]
description = "generic linear interpolation; should support dimension checking types etc by virtue of using fully generic intermediate values."
license = "MIT"
readme="README.md"
repository = "https://github.com/dobkeratops/lininterp"


[dependencies]
